# structured-lambda

./: README.md  dune-project
src/: dune  lambdaCalculus.ml  structuredArithmetic.ml  structuredBool.ml  structuredCoinductive.ml  structuredHelpers.ml  structuredMixed.ml  structuredPoly.ml  structuredRecursive.ml  structuredUnions.ml
src/structured/: baseCaseAlgebra.ml  dune  eval.ml  helpers.ml  metatypes.ml  stringUtils.ml  structured.ml  term.ml  type.ml  typeOperations.ml
src/structured/baseCaseAlgebra/: baseCaseAlgebra.ml  dune
src/structured/common/: helpers.ml
src/structured/metatypes/: dune  metatypes.ml
src/structured/stringUtils/: dune  stringUtils.ml
src/structured/termOperations/: dune  eval.ml  shiftUnivVar.ml  substituteUnivVar.ml  typing.ml  valToTerm.ml
src/structured/termTypes/: dune  termTypes.ml
src/structured/typeOperations/: context.ml  create.ml  dune  helpers.ml  intersection.ml  subtype.ml  unary.ml  union.ml  wellFounded.ml
test/: dune  lambdaCalculus.ml  simpleTypedLambda.ml  structuredLambda.ml  structuredLambdaArithmetic.ml  structuredLambdaBoolean.ml  structuredLambdaCoinductive.ml  structuredLambdaMixed.ml  structuredLambdaPoly.ml  structuredLambdaRecursive.ml  structuredLambdaTest.ml  structuredLambdaUnions.ml
