(tests
 (names
  lambdaCalculusTest
  simpleTypedLambda
  structuredLambdaTest
  structuredLambdaArithmetic
  structuredLambdaBoolean
  structuredLambdaMixed
  structuredLambdaRecursive
  structuredLambdaUnions
  structuredLambdaPoly)
 (libraries lambdaCalculus))

(env
 (dev
  (flags
   (:standard -w -37)
   (:standard -w -32))))
